Fixed CSS to break long lines and hide horizontal scrollbars

--- a/sass/general/_scrollbars.scss
+++ b/sass/general/_scrollbars.scss
@@ -46,3 +46,7 @@
     height:50%;
     width: 9px;
 }
+
+.jspHorizontalBar {
+    display: none;
+}
